--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kixonair</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
 </head>
 <body>
   <header class="navbar">
     <a href="/" class="brand">
-      <img src="/logo.svg" alt="Kixonair" class="logo" />
+      <img src="/logo.svg" alt="Kixonair" class="logo">
     </a>
   </header>
-  <main id="app"></main>
+  <main id="app">
+    <h1>Today’s Games, Zero Noise.</h1>
+    <div id="fixtures"></div>
+  </main>
+  <script>
+    async function loadFixtures() {
+      const today = new Date().toISOString().split('T')[0];
+      const res = await fetch(`/api/fixtures?date=${today}`);
+      const data = await res.json();
+      const container = document.getElementById('fixtures');
+      if (!data.fixtures || !data.fixtures.length) {
+        container.innerHTML = '<p>No matches found.</p>';
+        return;
+      }
+      container.innerHTML = data.fixtures.map(m => `
+        <div class="card">
+          <div class="meta">${m.competition} — <span class="tag">${m.sport}</span></div>
+          <div class="teams">
+            <span>${m.home}</span> vs <span>${m.away}</span>
+          </div>
+          <div class="time">${m.time}</div>
+          <a class="watch" target="_blank" href="https://rileymarker.com/sportlo">Watch Match</a>
+        </div>
+      `).join('');
+    }
+    loadFixtures();
+  </script>
 </body>
 </html>
