--- a/public/watch.html
+++ b/public/watch.html
@@ -7,14 +7,10 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <header class="navbar">
-    <a href="/" class="brand"><img src="/logo.svg" alt="Kixonair" class="logo"></a>
-  </header>
+  <header class="navbar"><a href="/"><img src="/logo.png" class="logo"></a></header>
   <main style="text-align:center; padding:20px;">
     <h1>Redirecting to Watch Match...</h1>
-    <script>
-      window.location.href = "https://rileymarker.com/sportlo";
-    </script>
+    <script>window.location.href = "https://rileymarker.com/sportlo";</script>
   </main>
 </body>
 </html>
