--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="theme-color" content="#0b0f14">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#0b0f14" />
